--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="navbar">
                         <div class="nav-list">
                             <img src="assets/img/logo/logo.png">
-                            .navlist
+                            .navlist cho em
                         </div>
                         <div class="nav-action">
 
