--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 
                         </div>
                     </div>
+                    <div class="navbar">
+                        <div class="nav-list">
+                            <img src="assets/img/logo/logo.png">
+                            .navlist cho em
+                        </div>
+                        <div class="nav-action">
+
+                        </div>
+                    </div>s
                 </div>
             </div>
         </div>
