--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="navbar">
                         <div class="nav-list">
                             <img src="assets/img/logo/logo.png">
-                            .navlist cho em
+                            .navlist cho em cho chung ta
                         </div>
                         <div class="nav-action">
 
