--- a/index.html
+++ b/index.html
@@ -51,8 +51,24 @@
                             </div>
                             <div class="navbar-content">
                                 <ul class="navbar-content__header">
-                                    <li>
+                                    <li class="nav-sub">
                                         <a>Demos <i class=" navbar-content__header__icon ti-angle-down"></i></a>
+                                        <ul class="nav-sub__demo">
+                                            <li class="nav-sub__demo__item">Demos</li>
+                                            <li class="nav-sub__demo__item">Large Post then Grid</li>
+                                            <li class="nav-sub__demo__item">Large Overlay then Grid</li>
+                                            <li class="nav-sub__demo__item">Large Post then List</li>
+                                            <li class="nav-sub__demo__item">Overlay then List</li>
+                                            <li class="nav-sub__demo__item">Mixed Overlays</li>
+                                            <li class="nav-sub__demo__item">Mixed Large then Grid</li>
+                                            <li class="nav-sub__demo__item">Grid</li>
+                                            <li class="nav-sub__demo__item">List</li>
+                                            <li class="nav-sub__demo__item">Classic</li>
+                                            <li class="nav-sub__demo__item">Overlay</li>
+                                            <li class="nav-sub__demo__item">Masonry</li>
+
+                                            
+                                        </ul>
                                     </li>
                                     <li>Features <i class="navbar-content__header__icon ti-angle-down"></i></li>
                                     <li>Lifestyle <i class="navbar-content__header__icon ti-angle-down"></i></li>
